# uam

./: .gitignore  10-uam.rules  80-uam.rules  80-uam.rules.in  COPYING  INSTALL  Makefile  Makefile.am  NEWS  README  TODO  configure  configure.ac  find-helper.sh  mounts.awk  uam-common.sh  uam-mount.sh  uam-umount.sh  uam.conf
src/: array.awk  find-helper.sh  mounts.awk  uam-common.sh  uam-mount.sh  uam-pmount  uam-pumount  uam-umount.sh
uam-hooks/mount-failed/: 90_sw_notify
uam-hooks/post-mount/: 90_sw_notify  95_pmount_cache
uam-hooks/post-umount/: 90_sw_notify
uam-hooks/pre-mount/: 00_filter_devices  00_wait_for_media
